fix: address layout problems in plan component cy-89

--- a/apps/frontend/src/pages/dashboard-wrapper-mock/components/plan/styles.module.css
+++ b/apps/frontend/src/pages/dashboard-wrapper-mock/components/plan/styles.module.css
@@ -29,8 +29,8 @@
 
 .content {
 	display: flex;
+	flex: 1;
 	flex-direction: row;
-	height: 100%;
 }
 
 .content__days.content__days__open {
